tests/interpreter/pass/008-let-mutable-shadow.hyg
let x: int = 1;
{
   let mutable x: int = 40 + x;
   x <- x + 1;
   assert(x = 42)
}
assert(x = 1)
