tests/interpreter/fail/029-array-slice-start-index-out-of-bounds.hyg
let arr: array {int} = array(2 + 2, 40 + 2);
let sliced: array {int} = arraySlice(arr, 4, 5);
sliced